kubernetes/dbserver.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5433
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      server: db
  template:
    metadata:
      labels:
        app: postgres
        server: db
  # template:
  #   metadata:
  #     labels:
  #       app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.4
        imagePullPolicy: "IfNotPresent"
        resources:
          limits:
            cpu: 50m
            memory: 100m
          requests:
            cpu: 50m
            memory: 100m
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-persistent-storage
          # mountPath: /var/lib/postgresql 20201122
          mountPath: /var/lib/postgresql/data
          subPath: data
      volumes:
      - name: postgresql-persistent-storage
        persistentVolumeClaim:
          claimName: postgresql-persistent-storage-claim
      # volumes:
      #   - name: postgresql-persistent-storage
      #     gcePersistentDisk:
      #       pdName: postgresql-disk
      #       fsType: ext4
  # volumeClaimTemplates: 20201122
  #   - metadata:
  #       name: postgresql-persistent-storage
  #     spec:
  #       accessModes:
  #       - ReadWriteOnce
  #       resources:
  #         requests:
  #           storage: 5G
      #     volumeMounts:
      #       - mountPath: /var/lib/postgresql/data
      #         name: postgredb
      # volumes:
      #   - name: postgredb
      #     persistentVolumeClaim:
      #       claimName: postgres-pv-claim
