kubernetes/mongoserver.yml
# https://qiita.com/uryyyyyyy/items/06f32d1b979e48944947
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo-service"
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:4.4
        resources:
          limits:
            cpu: 25m
            memory: 100Mi #1500m
          requests:
            cpu: 25m
            memory: 100Mi #1500m
        command:
          - mongod
          - "--replSet"
          - rs0
          - "--bind_ip"
          - "0.0.0.0"
        ports:
          - containerPort: 27017
        # envFrom:
        # - configMapRef:
        #     name: postgres-configuration
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /var/lib/mongo/data
          # subPath: data
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-persistent-storage-claim
