kubernetes/redissentinel.yml
# https://qiita.com/MahoTakara/items/2a396958d92cf67f80be
# https://spsarolkar.github.io/redis/high-availability/sentinel/kubernetes/2019/12/29/Configuring-Redis-High-Availability-Sentinel-Configuration.html
# https://sarweshsuman-1.medium.com/deploying-redis-ha-cluster-in-kubernetes-437162337625
# https://docs.bitnami.com/tutorials/deploy-redis-sentinel-production-cluster/
# https://hub.docker.com/r/bitnami/redis-sentinel/
# redis-controller.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    name: redis
  template:
    metadata:
      labels:
        name: redis
        role: master
    spec:
      containers:
      - name: redis
        image: k8s.gcr.io/redis:v1
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.1"
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
      volumes:
        - name: data


# redis-sentinel-controller.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: redis-sentinel
spec:
  replicas: 1
  selector:
    redis-sentinel: "true"
  template:
    metadata:
      labels:
        name: redis-sentinel
        redis-sentinel: "true"
        role: sentinel
    spec:
      containers:
      - name: sentinel
        image: k8s.gcr.io/redis:v1
        env:
          - name: SENTINEL
            value: "true"
        ports:
          - containerPort: 26379 

# redis-sentinel-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sentinel
    role: service
  name: redis-sentinel
spec:
  ports:
    - port: 26379
      targetPort: 26379
  selector:
    redis-sentinel: "true"
