kubernetes/apiserver.yml
# nginx ingress
# https://helm.sh/ja/docs/intro/install/
# helm repo add "stable" "https://charts.helm.sh/stable" --force-update
# https://vincentlauzon.com/2020/02/11/ingress-rules-in-different-kubernetes-namespaces
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apiserver-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /recom
          backend:
            serviceName: recommendserver-service
            servicePort: 80
        - path: /
          backend:
              serviceName: apiserver-service
              servicePort: 80
          
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: apiserver-ingress
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: "newsapp-ingress"
# spec:
#   backend:
#     serviceName: apiserver-service
#     servicePort: 80
# metadata:
#   name: apiserver-ingress
# #  annotations:
# #    kubernetes.io/ingress.global-static-ip-name: test-ip
#   labels:
#     app: get_latest_article_list
# spec:
#   rules:
#   - host: gitouhon-juku-k8s2.ga
#     http:
#       paths:
#       # - path: /argo-cd
#       #   backend:
#       #     serviceName: argocd-server-ext
#       #     servicePort: 80
#       - path: /*
#         backend:
#           serviceName: apiserver-service
#           servicePort: 80
---
# For ArgoCD
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: argocd-server
            servicePort: 80
          path: /argo-cd(/|$)(.*)
# apiVersion: v1
# kind: Service
# metadata:
#   name: argocd-server-ext
#   namespace: default
# spec:
#   type: ExternalName
#   externalName: argocd-server.argocd.svc.cluster.local
#   ports:
#     - port: 80
#       targetPort: 80
---
# For ArgoWorkflows
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: argo-server
            servicePort: 2746
          # path: /argo
          path: /argo(/|$)(.*)
# apiVersion: v1
# kind: Service
# metadata:
#   name: argo-server-ext
#   namespace: default
# spec:
#   type: ExternalName
#   externalName: argo-server.argo.svc.cluster.local
#   ports:
#     - port: 80
#       targetPort: 2746

---
apiVersion: v1
kind: Service
metadata:
  name: apiserver-service
spec:
  type: NodePort
  # type: LoadBalancer
  selector:
    app: get_latest_article_list
    server: api
  ports:
    - port: 80
      targetPort: 8770

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver-deployment
  labels:
    app: get_latest_article_list
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get_latest_article_list
      server: api
  template:
    metadata:
      labels:
        app: get_latest_article_list
        server: api
    spec:
      volumes:
        - name: data-storage
          emptyDir: {}
      containers:
        - name: go-echo
          image: gcr.io/gke-test-287910/getpost:v44
          imagePullPolicy: Always
          resources:
           requests:
            cpu: 50m
          ports:
            - containerPort: 8770
          volumeMounts:
            - mountPath: /data/data-storage
              name: data-storage
